feat: add incident orchestration domain/data/infrastructure/service layer for ts stress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
     { "path": "./packages/domain/policy-engine" },
     { "path": "./packages/domain/observability-core" },
     { "path": "./packages/domain/enterprise-facts" },
+    { "path": "./packages/domain/incident-management" },
     { "path": "./packages/domain/streaming-engine" },
     { "path": "./packages/domain/nebula-grid" },
     { "path": "./packages/domain/nebula-grid-a" },
@@ -60,6 +61,7 @@
     { "path": "./packages/data/adapters" },
     { "path": "./packages/data/warehouse" },
     { "path": "./packages/data/lineage" },
+    { "path": "./packages/data/incident-hub" },
     { "path": "./packages/service/checkout" },
     { "path": "./packages/service/analytics" },
     { "path": "./packages/service/finance" },
@@ -73,6 +75,7 @@
     { "path": "./packages/service/recommendation" },
     { "path": "./packages/service/graph-intelligence" },
     { "path": "./packages/service/orchestrations" },
+    { "path": "./packages/service/incident-orchestration" },
     { "path": "./packages/service/execution-engine" },
     { "path": "./packages/service/telemetry" },
     { "path": "./packages/service/streaming-control" },
@@ -82,6 +85,7 @@
     { "path": "./packages/platform/policy" },
     { "path": "./packages/infrastructure/aws-ops" },
     { "path": "./packages/infrastructure/transformers" },
+    { "path": "./packages/infrastructure/incident-notifications" },
     { "path": "./packages/app/api-gateway" },
     { "path": "./packages/app/admin-portal" },
     { "path": "./packages/app/worker" },
