--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,8 +56,10 @@
     { "path": "./packages/domain/reporting" },
     { "path": "./packages/domain/fulfillment" },
     { "path": "./packages/domain/temporal" },
+    { "path": "./packages/domain/decision-orchestration" },
     { "path": "./packages/data/repositories" },
     { "path": "./packages/data/query-models" },
+    { "path": "./packages/data/decision-catalog" },
     { "path": "./packages/data/adapters" },
     { "path": "./packages/data/warehouse" },
     { "path": "./packages/data/lineage" },
@@ -80,6 +82,7 @@
     { "path": "./packages/service/telemetry" },
     { "path": "./packages/service/streaming-control" },
     { "path": "./packages/service/fuzzy-router" },
+    { "path": "./packages/service/decision-runtime" },
     { "path": "./packages/platform/security" },
     { "path": "./packages/platform/ingress" },
     { "path": "./packages/platform/policy" },
