--- a/packages/service/telemetry/package.json
+++ b/packages/service/telemetry/package.json
@@ -4,7 +4,22 @@
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "exports": { ".": "./dist/index.js" },
-  "scripts": { "build": "tsc -b" },
-  "dependencies": {}
+  "exports": {
+    ".": "./src/index.ts",
+    "./src": "./src/index.ts",
+    "./*": "./src/*.ts",
+    "./src/*": "./src/*.ts"
+  },
+  "scripts": {
+    "build": "tsc -b"
+  },
+  "dependencies": {
+    "@shared/core": "workspace:*",
+    "@shared/type-level": "workspace:*",
+    "@shared/validation": "workspace:*",
+    "@data/repositories": "workspace:*",
+    "@data/telemetry-store": "workspace:*",
+    "@domain/telemetry-models": "workspace:*",
+    "@platform/messaging": "workspace:*"
+  }
 }
