feat(tsz): add continuity orchestration domain,data,service packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,10 +52,12 @@
     { "path": "./packages/domain/workflow" },
     { "path": "./packages/domain/telemetry-models" },
     { "path": "./packages/domain/risk" },
+    { "path": "./packages/domain/continuity-orchestration" },
     { "path": "./packages/domain/reporting" },
     { "path": "./packages/domain/fulfillment" },
     { "path": "./packages/domain/temporal" },
     { "path": "./packages/domain/decision-orchestration" },
+    { "path": "./packages/data/continuity-journal" },
     { "path": "./packages/data/repositories" },
     { "path": "./packages/data/telemetry-store" },
     { "path": "./packages/data/query-models" },
@@ -83,6 +85,7 @@
     { "path": "./packages/service/telemetry" },
     { "path": "./packages/service/streaming-control" },
     { "path": "./packages/service/fuzzy-router" },
+    { "path": "./packages/service/continuity-runtime" },
     { "path": "./packages/service/decision-runtime" },
     { "path": "./packages/platform/security" },
     { "path": "./packages/platform/ingress" },
