--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
     { "path": "./packages/domain/policy-engine" },
     { "path": "./packages/domain/observability-core" },
     { "path": "./packages/domain/operations-orchestration" },
+    { "path": "./packages/domain/operations-control" },
     { "path": "./packages/domain/enterprise-facts" },
     { "path": "./packages/domain/incident-management" },
     { "path": "./packages/domain/streaming-engine" },
@@ -66,6 +67,7 @@
     { "path": "./packages/data/warehouse" },
     { "path": "./packages/data/lineage" },
     { "path": "./packages/data/incident-hub" },
+    { "path": "./packages/data/operations-control-store" },
     { "path": "./packages/service/checkout" },
     { "path": "./packages/service/analytics" },
     { "path": "./packages/service/decision-mesh" },
