--- a/packages/service/operations/tsconfig.json
+++ b/packages/service/operations/tsconfig.json
@@ -1,16 +1,46 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": { "outDir": "./dist", "composite": true, "declaration": true },
-  "include": ["src/**/*"],
+  "extends": "../../../tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "./dist",
+    "composite": true,
+    "declaration": true
+  },
+  "include": [
+    "src/**/*"
+  ],
   "references": [
-    { "path": "../../data/incident-hub" },
-    { "path": "../../data/query-models" },
-    { "path": "../../domain/incident-management" },
-    { "path": "../../domain/operations-orchestration" },
-    { "path": "../../platform/messaging" },
-    { "path": "../../platform/observability" },
-    { "path": "../../service/quality" },
-    { "path": "../../shared/core" },
-    { "path": "../../shared/result" }
+    {
+      "path": "./../../data/incident-hub/tsconfig.json"
+    },
+    {
+      "path": "./../../data/query-models/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/incident-management/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/operations-orchestration/tsconfig.json"
+    },
+    {
+      "path": "./../../platform/messaging/tsconfig.json"
+    },
+    {
+      "path": "./../../platform/observability/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/operations-control/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../data/operations-control-store/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../quality/tsconfig.json"
+    }
   ]
 }
