feat: add failover orchestration domain data and runtime stack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,9 +56,11 @@
     { "path": "./packages/domain/continuity-orchestration" },
     { "path": "./packages/domain/reporting" },
     { "path": "./packages/domain/fulfillment" },
+    { "path": "./packages/domain/failover-orchestration" },
     { "path": "./packages/domain/temporal" },
     { "path": "./packages/domain/decision-orchestration" },
     { "path": "./packages/data/continuity-journal" },
+    { "path": "./packages/data/failover-plans" },
     { "path": "./packages/data/repositories" },
     { "path": "./packages/data/telemetry-store" },
     { "path": "./packages/data/query-models" },
@@ -84,6 +86,7 @@
     { "path": "./packages/service/orchestrations" },
     { "path": "./packages/service/incident-orchestration" },
     { "path": "./packages/service/execution-engine" },
+    { "path": "./packages/service/failover-runtime" },
     { "path": "./packages/service/telemetry" },
     { "path": "./packages/service/streaming-control" },
     { "path": "./packages/service/fuzzy-router" },
