--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,111 +1,341 @@
 {
   "files": [],
   "references": [
-    { "path": "./packages/shared/core" },
-    { "path": "./packages/shared/result" },
-    { "path": "./packages/shared/errors" },
-    { "path": "./packages/shared/protocol" },
-    { "path": "./packages/shared/validation" },
-    { "path": "./packages/shared/util" },
-    { "path": "./packages/shared/zod-adapters" },
-    { "path": "./packages/shared/aws-adapters" },
-    { "path": "./packages/shared/type-level" },
-    { "path": "./packages/shared/monads" },
-    { "path": "./packages/shared/codec" },
-    { "path": "./packages/platform/config" },
-    { "path": "./packages/platform/logging" },
-    { "path": "./packages/platform/messaging" },
-    { "path": "./packages/platform/storage" },
-    { "path": "./packages/platform/observability" },
-    { "path": "./packages/platform/integrations" },
-    { "path": "./packages/platform/queue" },
-    { "path": "./packages/platform/http" },
-    { "path": "./packages/domain/identity" },
-    { "path": "./packages/domain/identity-verification" },
-    { "path": "./packages/domain/pricing" },
-    { "path": "./packages/domain/billing-ledger" },
-    { "path": "./packages/domain/billing" },
-    { "path": "./packages/domain/orders" },
-    { "path": "./packages/domain/catalog" },
-    { "path": "./packages/domain/pricing" },
-    { "path": "./packages/domain/inventory" },
-    { "path": "./packages/domain/analytics" },
-    { "path": "./packages/domain/compliance" },
-    { "path": "./packages/domain/contracts" },
-    { "path": "./packages/domain/feature-flags" },
-    { "path": "./packages/domain/notification" },
-    { "path": "./packages/domain/knowledge-graph" },
-    { "path": "./packages/domain/search-suite" },
-    { "path": "./packages/domain/policy-engine" },
-    { "path": "./packages/domain/observability-core" },
-    { "path": "./packages/domain/operations-orchestration" },
-    { "path": "./packages/domain/operations-control" },
-    { "path": "./packages/domain/enterprise-facts" },
-    { "path": "./packages/domain/incident-management" },
-    { "path": "./packages/domain/streaming-engine" },
-    { "path": "./packages/domain/nebula-grid" },
-    { "path": "./packages/domain/nebula-grid-a" },
-    { "path": "./packages/domain/nebula-grid-b" },
-    { "path": "./packages/domain/nebula-grid-c" },
-    { "path": "./packages/domain/nebula-grid-d" },
-    { "path": "./packages/domain/nebula-orchestration" },
-    { "path": "./packages/domain/fuzzy" },
-    { "path": "./packages/domain/workflow" },
-    { "path": "./packages/domain/telemetry-models" },
-    { "path": "./packages/domain/risk" },
-    { "path": "./packages/domain/continuity-orchestration" },
-    { "path": "./packages/domain/reporting" },
-    { "path": "./packages/domain/fulfillment" },
-    { "path": "./packages/domain/failover-orchestration" },
-    { "path": "./packages/domain/temporal" },
-    { "path": "./packages/domain/decision-orchestration" },
-    { "path": "./packages/data/continuity-journal" },
-    { "path": "./packages/data/failover-plans" },
-    { "path": "./packages/data/repositories" },
-    { "path": "./packages/data/telemetry-store" },
-    { "path": "./packages/data/query-models" },
-    { "path": "./packages/data/decision-catalog" },
-    { "path": "./packages/data/adapters" },
-    { "path": "./packages/data/warehouse" },
-    { "path": "./packages/data/lineage" },
-    { "path": "./packages/data/incident-hub" },
-    { "path": "./packages/data/operations-control-store" },
-    { "path": "./packages/service/checkout" },
-    { "path": "./packages/service/analytics" },
-    { "path": "./packages/service/decision-mesh" },
-    { "path": "./packages/service/finance" },
-    { "path": "./packages/service/orchestrators" },
-    { "path": "./packages/service/operations" },
-    { "path": "./packages/service/reputation" },
-    { "path": "./packages/service/reporting" },
-    { "path": "./packages/service/workflow" },
-    { "path": "./packages/service/quality" },
-    { "path": "./packages/service/ingestion" },
-    { "path": "./packages/service/recommendation" },
-    { "path": "./packages/service/graph-intelligence" },
-    { "path": "./packages/service/orchestrations" },
-    { "path": "./packages/service/incident-orchestration" },
-    { "path": "./packages/service/execution-engine" },
-    { "path": "./packages/service/failover-runtime" },
-    { "path": "./packages/service/telemetry" },
-    { "path": "./packages/service/streaming-control" },
-    { "path": "./packages/service/fuzzy-router" },
-    { "path": "./packages/service/continuity-runtime" },
-    { "path": "./packages/service/decision-runtime" },
-    { "path": "./packages/platform/security" },
-    { "path": "./packages/platform/ingress" },
-    { "path": "./packages/platform/policy" },
-    { "path": "./packages/infrastructure/aws-ops" },
-    { "path": "./packages/infrastructure/transformers" },
-    { "path": "./packages/infrastructure/incident-notifications" },
-    { "path": "./packages/app/api-gateway" },
-    { "path": "./packages/app/admin-portal" },
-    { "path": "./packages/app/worker" },
-    { "path": "./packages/app/cli" },
-    { "path": "./packages/app/reporter" },
-    { "path": "./packages/app/insights" },
-    { "path": "./packages/app/policy-console" },
-    { "path": "./packages/app/stream-dashboard" },
-    { "path": "./packages/app/fuzzy-console" }
+    {
+      "path": "./packages/app/adaptive-ops-console"
+    },
+    {
+      "path": "./packages/app/admin-portal"
+    },
+    {
+      "path": "./packages/app/api-gateway"
+    },
+    {
+      "path": "./packages/app/cli"
+    },
+    {
+      "path": "./packages/app/fuzzy-console"
+    },
+    {
+      "path": "./packages/app/insights"
+    },
+    {
+      "path": "./packages/app/policy-console"
+    },
+    {
+      "path": "./packages/app/reporter"
+    },
+    {
+      "path": "./packages/app/stream-dashboard"
+    },
+    {
+      "path": "./packages/app/worker"
+    },
+    {
+      "path": "./packages/data/adapters"
+    },
+    {
+      "path": "./packages/data/adaptive-ops-store"
+    },
+    {
+      "path": "./packages/data/continuity-journal"
+    },
+    {
+      "path": "./packages/data/decision-catalog"
+    },
+    {
+      "path": "./packages/data/failover-plans"
+    },
+    {
+      "path": "./packages/data/incident-hub"
+    },
+    {
+      "path": "./packages/data/lineage"
+    },
+    {
+      "path": "./packages/data/operations-control-store"
+    },
+    {
+      "path": "./packages/data/query-models"
+    },
+    {
+      "path": "./packages/data/repositories"
+    },
+    {
+      "path": "./packages/data/telemetry-store"
+    },
+    {
+      "path": "./packages/data/warehouse"
+    },
+    {
+      "path": "./packages/domain/adaptive-ops"
+    },
+    {
+      "path": "./packages/domain/analytics"
+    },
+    {
+      "path": "./packages/domain/billing"
+    },
+    {
+      "path": "./packages/domain/billing-ledger"
+    },
+    {
+      "path": "./packages/domain/catalog"
+    },
+    {
+      "path": "./packages/domain/compliance"
+    },
+    {
+      "path": "./packages/domain/continuity-orchestration"
+    },
+    {
+      "path": "./packages/domain/contracts"
+    },
+    {
+      "path": "./packages/domain/decision-orchestration"
+    },
+    {
+      "path": "./packages/domain/enterprise-facts"
+    },
+    {
+      "path": "./packages/domain/failover-orchestration"
+    },
+    {
+      "path": "./packages/domain/feature-flags"
+    },
+    {
+      "path": "./packages/domain/fulfillment"
+    },
+    {
+      "path": "./packages/domain/fuzzy"
+    },
+    {
+      "path": "./packages/domain/identity"
+    },
+    {
+      "path": "./packages/domain/identity-verification"
+    },
+    {
+      "path": "./packages/domain/incident-management"
+    },
+    {
+      "path": "./packages/domain/inventory"
+    },
+    {
+      "path": "./packages/domain/knowledge-graph"
+    },
+    {
+      "path": "./packages/domain/nebula-grid"
+    },
+    {
+      "path": "./packages/domain/nebula-grid-a"
+    },
+    {
+      "path": "./packages/domain/nebula-grid-b"
+    },
+    {
+      "path": "./packages/domain/nebula-grid-c"
+    },
+    {
+      "path": "./packages/domain/nebula-grid-d"
+    },
+    {
+      "path": "./packages/domain/nebula-orchestration"
+    },
+    {
+      "path": "./packages/domain/notification"
+    },
+    {
+      "path": "./packages/domain/observability-core"
+    },
+    {
+      "path": "./packages/domain/operations-control"
+    },
+    {
+      "path": "./packages/domain/operations-orchestration"
+    },
+    {
+      "path": "./packages/domain/orders"
+    },
+    {
+      "path": "./packages/domain/policy-engine"
+    },
+    {
+      "path": "./packages/domain/pricing"
+    },
+    {
+      "path": "./packages/domain/pricing"
+    },
+    {
+      "path": "./packages/domain/reporting"
+    },
+    {
+      "path": "./packages/domain/risk"
+    },
+    {
+      "path": "./packages/domain/search-suite"
+    },
+    {
+      "path": "./packages/domain/streaming-engine"
+    },
+    {
+      "path": "./packages/domain/telemetry-models"
+    },
+    {
+      "path": "./packages/domain/temporal"
+    },
+    {
+      "path": "./packages/domain/workflow"
+    },
+    {
+      "path": "./packages/infrastructure/aws-ops"
+    },
+    {
+      "path": "./packages/infrastructure/incident-connectors"
+    },
+    {
+      "path": "./packages/infrastructure/incident-notifications"
+    },
+    {
+      "path": "./packages/infrastructure/transformers"
+    },
+    {
+      "path": "./packages/platform/config"
+    },
+    {
+      "path": "./packages/platform/http"
+    },
+    {
+      "path": "./packages/platform/ingress"
+    },
+    {
+      "path": "./packages/platform/integrations"
+    },
+    {
+      "path": "./packages/platform/logging"
+    },
+    {
+      "path": "./packages/platform/messaging"
+    },
+    {
+      "path": "./packages/platform/observability"
+    },
+    {
+      "path": "./packages/platform/policy"
+    },
+    {
+      "path": "./packages/platform/queue"
+    },
+    {
+      "path": "./packages/platform/security"
+    },
+    {
+      "path": "./packages/platform/storage"
+    },
+    {
+      "path": "./packages/service/adaptive-ops-runner"
+    },
+    {
+      "path": "./packages/service/analytics"
+    },
+    {
+      "path": "./packages/service/checkout"
+    },
+    {
+      "path": "./packages/service/continuity-runtime"
+    },
+    {
+      "path": "./packages/service/decision-mesh"
+    },
+    {
+      "path": "./packages/service/decision-runtime"
+    },
+    {
+      "path": "./packages/service/execution-engine"
+    },
+    {
+      "path": "./packages/service/failover-runtime"
+    },
+    {
+      "path": "./packages/service/finance"
+    },
+    {
+      "path": "./packages/service/fuzzy-router"
+    },
+    {
+      "path": "./packages/service/graph-intelligence"
+    },
+    {
+      "path": "./packages/service/incident-orchestration"
+    },
+    {
+      "path": "./packages/service/ingestion"
+    },
+    {
+      "path": "./packages/service/operations"
+    },
+    {
+      "path": "./packages/service/orchestrations"
+    },
+    {
+      "path": "./packages/service/orchestrators"
+    },
+    {
+      "path": "./packages/service/quality"
+    },
+    {
+      "path": "./packages/service/recommendation"
+    },
+    {
+      "path": "./packages/service/reporting"
+    },
+    {
+      "path": "./packages/service/reputation"
+    },
+    {
+      "path": "./packages/service/streaming-control"
+    },
+    {
+      "path": "./packages/service/telemetry"
+    },
+    {
+      "path": "./packages/service/workflow"
+    },
+    {
+      "path": "./packages/shared/aws-adapters"
+    },
+    {
+      "path": "./packages/shared/codec"
+    },
+    {
+      "path": "./packages/shared/core"
+    },
+    {
+      "path": "./packages/shared/errors"
+    },
+    {
+      "path": "./packages/shared/monads"
+    },
+    {
+      "path": "./packages/shared/observability-contracts"
+    },
+    {
+      "path": "./packages/shared/protocol"
+    },
+    {
+      "path": "./packages/shared/result"
+    },
+    {
+      "path": "./packages/shared/type-level"
+    },
+    {
+      "path": "./packages/shared/util"
+    },
+    {
+      "path": "./packages/shared/validation"
+    },
+    {
+      "path": "./packages/shared/zod-adapters"
+    }
   ]
 }
