--- a/packages/data/failover-plans/package.json
+++ b/packages/data/failover-plans/package.json
@@ -2,8 +2,8 @@
   "name": "@data/failover-plans",
   "version": "0.0.1",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "exports": {
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
