--- a/packages/data/recovery-observability/package.json
+++ b/packages/data/recovery-observability/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@data/recovery-artifacts",
+  "name": "@data/recovery-observability",
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
@@ -14,8 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@domain/recovery-orchestration": "workspace:*",
-    "@shared/protocol": "workspace:*",
+    "@data/recovery-artifacts": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/type-level": "workspace:*",
     "zod": "^3.24.0"
