Refactor recovery risk models and observability components
- Updated RiskEnvelope to use RiskVector instead of DeepMerge for signals.
- Removed unused Drift import in null-drill-observability.
- Changed S3Archive options to include region directly.
- Added recovery-observability as a dependency in recovery-notifications.
- Adjusted import paths for recovery-observability types in notifications.
- Updated tsconfig to include recovery-observability.
- Reordered imports in bus adapter for clarity.
- Cleaned up imports in ingestion service and adjusted metric parsing.
- Modified tenantSnapshot return type to readonly array.
- Refined reporting service imports and adjusted run state normalization.
- Updated orchestrator and planner to use src paths for recovery-drill types.
- Enhanced recovery-intelligence orchestrator imports for consistency.
- Fixed type imports in recovery-readiness orchestrator and planner.
- Improved recovery-risk-engine to bundle evidence and factors more effectively.
- Adjusted recovery-runner imports for telemetry.
- Enhanced recovery orchestrator to include risk dimensions in signal creation.
- Added utility types and functions to shared type-level package for better type handling.

--- a/packages/infrastructure/recovery-notifications/package.json
+++ b/packages/infrastructure/recovery-notifications/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-eventbridge": "^3.900.0",
     "@aws-sdk/client-sns": "^3.900.0",
+    "@data/recovery-observability": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/protocol": "workspace:*"
