--- a/packages/service/recovery-operations-policy-engine/package.json
+++ b/packages/service/recovery-operations-policy-engine/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@service/recovery-operations-engine",
+  "name": "@service/recovery-operations-policy-engine",
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
@@ -14,14 +14,11 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@domain/recovery-operations-governance": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
-    "@domain/recovery-orchestration": "workspace:*",
-    "@domain/recovery-readiness": "workspace:*",
-    "@data/recovery-operations-store": "workspace:*",
-    "@infrastructure/recovery-operations-queue": "workspace:*",
-    "@service/recovery-operations-policy-engine": "workspace:*",
     "@data/recovery-operations-governance-store": "workspace:*",
     "@infrastructure/recovery-operations-compliance": "workspace:*",
-    "zod": "^3.24.0"
+    "@shared/result": "workspace:*",
+    "@shared/core": "workspace:*"
   }
 }
